# opencv_machine_learning

./: CMakeLists.txt  HOG.cpp  HOG.hpp  README.md  build.sh  build_all.sh~  clean.sh  code.cpp~  main.cpp  opencv_io.cpp  opencv_io.hpp  run.sh  run.sh~  run_astronaut.sh  run_circle.sh  run_person.sh  training.cpp
